The first task done.

--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,18 @@
     <link href="style.css">
 </head>
 <body>
-<template>
-    <div class="student">
 
+<template id="template">
+    <div class="student">
+        <h2 class="studentName"></h2>
+        <p class="grade"></p>
     </div>
 </template>
 
-<div id="students">
+<h1>All students</h1>
 
+<div id="students">
 </div>
+
 </body>
 </html>
