The third task done.

--- a/src/index.html
+++ b/src/index.html
@@ -20,5 +20,11 @@
 <div id="students">
 </div>
 
+<br>
+<form id="addStudentForm">
+    <input id="nameInput" type="text" required placeholder="Full name">
+    <input id="gradeInput" type="number" required placeholder="100">
+    <input type="submit">
+</form>
 </body>
 </html>
